--- a/ymcf/package.json
+++ b/ymcf/package.json
@@ -17,12 +17,16 @@
     "leaflet": "^1.9.4",
     "mitt": "^3.0.1",
     "multer": "^2.0.0",
+    "naive-ui": "^2.42.0",
     "openai": "^4.103.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.2",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-vue-components": "^28.8.0",
     "vite": "^6.3.1",
     "vite-plugin-cesium": "^1.2.23"
   }
