--- a/ymcf/package.json
+++ b/ymcf/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
+    "lucide-vue-next": "^0.533.0",
     "mitt": "^3.0.1",
     "multer": "^2.0.0",
     "naive-ui": "^2.42.0",
@@ -24,7 +25,11 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@unocss/preset-attributify": "^66.3.3",
+    "@unocss/preset-uno": "^66.3.3",
     "@vitejs/plugin-vue": "^5.2.2",
+    "modern-normalize": "^3.0.1",
+    "unocss": "^66.3.3",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-vue-components": "^28.8.0",
     "vite": "^6.3.1",
